overflow fix

--- a/sass/basic.sass
+++ b/sass/basic.sass
@@ -413,7 +413,7 @@ td
         display: flex
         justify-content: space-between
     @media (max-width: $pad_hor)
-        overflow: auto
+        overflow-y: auto
         white-space: nowrap
 
 // Common  blocks - end
